--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>evie</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=devce-width, initial-scale=1.0" />
   </head>
   <body>
     <h1 id="top">evie</h1>
@@ -108,4 +109,3 @@
     <p>lojban</p>
   </body>
 </html>
-
