--- a/index.html
+++ b/index.html
@@ -27,7 +27,45 @@
     </p>
     <p><code>mi2ebi</code> on discord and github</p>
     <h2 id="languages">languages</h2>
-    <p>english &gt; toaq &gt; lojban klingon xextan ⋙ latin loglan</p>
+    <svg width="300" height="300" xmlns="http://www.w3.org/2000/svg">
+      <style>
+        text {
+          fill: var(--fg-main);
+          dominant-baseline: hanging;
+        }
+        .nat {
+          fill: var(--cyan-cooler);
+        }
+        .con {
+          fill: var(--magenta);
+        }
+        .prog {
+          fill: var(--yellow);
+        }
+      </style>
+      <path
+        fill="none" stroke="var(--fg-main)" stroke-width="3"
+        d="M 0 0 v 300 h 300"
+      />
+      <text x="5">likes</text>
+      <text x="300" dx="-72" y="278">is good at</text>
+      <text x="240" y="70" class="nat">english</text>
+      <text x="170" class="con">toaq</text>
+      <text x="140" y="220" class="con">lojban</text>
+      <text x="130" y="60" class="con">klingon</text>
+      <text x="130" y="80" class="con">xextan</text>
+      <text x="10" y="50" class="nat">latin</text>
+      <text x="10" y="68" class="con">loglan</text>
+      <text x="250" class="prog">html</text>
+      <text x="240" y="14" class="prog">css</text>
+      <text x="210" y="250" class="prog">javascript</text>
+      <text x="210" class="prog">rust</text>
+      <text x="140" y="140" class="prog">python</text>
+      <text x="130" y="250" class="prog">typescript</text>
+      <text x="20" y="85" class="prog">uiua</text>
+      <text x="30" y="34" class="prog">raku</text>
+      <text x="80" y="60" class="prog">svg</text>
+    </svg>
     <h2 id="projects">things i have made</h2>
     <p>several dictionaries for loglangs. maybe too many.</p>
     <ul>
