people probably know what iso8601 is

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       fedora 43 (kde, wayland), wezterm, fish, helix.
       all of which are good usually
     </p>
-    <p>iso 8601 (the date format that goes <i>year</i>-<i>month</i>-<i>day</i>)</p>
+    <p>iso 8601</p>
     <h2 id="dislikes">things i dislike</h2>
     <p>coffee</p>
     <p>people that consistently think they know me better than i do</p>
