--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </script>. fun fact i never have to edit that myself
     </p>
     <pre>
-<span class="keyword">document</span>.<span class="fnname">write</span><span class="rainbow0">(</span>
+<span class="keyword">document</span>.<span class="function">write</span><span class="rainbow0">(</span>
   <span class="type">Math</span>.<span class="function">floor</span><span class="rainbow1">(</span><span class="rainbow2">(</span><span class="keyword">new</span> <span class="type">Date</span><span class="rainbow3">()</span> - <span class="keyword">new</span> <span class="type">Date</span><span class="rainbow3">(</span><span class="string">"2006-08-25"</span><span class="rainbow3">)</span><span class="rainbow2">)</span> / <span class="constant">31556925974.7</span><span class="rainbow1">)</span>
 <span class="rainbow0">)</span>; <span class="comment">// <b>TODO</b> use <span class="type">Temporal</span><span class="fgmain">.</span><span class="type">PlainDate</span> etc</span>
 </pre>
