move some langs around

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       i am going to put things here later. <small>hey maybe itd be funny if i just left
       that there all the time and never got rid of it even once theres things</small>
     </p>
-    <p><code>mi2ebi</code> on discord and github</p>
+    <p><code>mi2ebi</code> on discord and <a href="https://github.com/mi2ebi">github</a></p>
     <h2 id="languages">languages</h2>
     <svg width="300" height="300" xmlns="http://www.w3.org/2000/svg">
       <style>
@@ -50,10 +50,10 @@
       <text x="5">likes</text>
       <text x="300" dx="-72" y="278">is good at</text>
       <text x="240" y="70" class="nat">english</text>
-      <text x="170" class="con">toaq</text>
+      <text x="160" class="con">toaq</text>
       <text x="140" y="220" class="con">lojban</text>
-      <text x="130" y="60" class="con">klingon</text>
-      <text x="130" y="80" class="con">xextan</text>
+      <text x="80" y="60" class="con">klingon</text>
+      <text x="82.5" y="80" class="con">xextan</text>
       <text x="10" y="50" class="nat">latin</text>
       <text x="10" y="68" class="con">loglan</text>
       <text x="250" class="prog">html</text>
@@ -61,10 +61,10 @@
       <text x="210" y="250" class="prog">javascript</text>
       <text x="210" class="prog">rust</text>
       <text x="140" y="140" class="prog">python</text>
-      <text x="130" y="250" class="prog">typescript</text>
+      <text x="100" y="250" class="prog">typescript</text>
       <text x="20" y="85" class="prog">uiua</text>
-      <text x="30" y="34" class="prog">raku</text>
-      <text x="80" y="60" class="prog">svg</text>
+      <text x="30" y="20" class="prog">raku</text>
+      <text x="70" y="40" class="prog">svg</text>
     </svg>
     <h2 id="projects">things i have made</h2>
     <p>several dictionaries for loglangs. maybe too many.</p>
@@ -137,8 +137,8 @@
     </p>
     <p>everything getting worse. technology, politics, whatever</p>
     <p>
-      sparkle emoji getting coöpted to mean ai <small>(also, sparkle emoji
-      being made less colorful!! give me back purple and blue sparkle emoji)</small>
+      sparkle emoji getting coöpted to mean ai. also, sparkle emoji
+      being made less colorful!! give me back purple and blue sparkle emoji
     </p>
     <h2 id="ablikes">
       things i <abbr title="don't like, just kinda tolerate">ablike</abbr>
