--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
         a custom build of iosevka
       </li>
     </ul>
+    <p>i was in <a href="https://www.youtube.com/watch?v=L2tLc2uJgtU">this episode</a> of <i lang="jbo">la lojbau selkicrypoi</i> (<i lang="jbo">ki'e lanru qusai</i>)</p>
     <h2 id="likes">things i like</h2>
     <p>html is a very good medium. it can do basically everything</p>
     <p>
