--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>evie</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style.css" />
-    <meta name="viewport" content="width=devce-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <h1 id="top">evie</h1>
