move js leftward

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         document.write(
           Math.floor((new Date() - new Date("2006-08-25")) / 31556925974.7),
         ); // TODO use Temporal.PlainDate etc
-      </script>. fun fact i never have to edit that myself
+      </script>.
+      fun fact i never have to edit that myself
     </p>
     <pre>
 <span class="keyword">document</span>.<span class="function">write</span><span class="rainbow0">(</span>
@@ -25,7 +26,9 @@
       i am going to put things here later. <small>hey maybe itd be funny if i just left
       that there all the time and never got rid of it even once theres things</small>
     </p>
-    <p><code>mi2ebi</code> on discord and <a href="https://github.com/mi2ebi">github</a></p>
+    <p>
+      <code>mi2ebi</code> on discord and <a href="https://github.com/mi2ebi">github</a>
+    </p>
     <h2 id="languages">languages</h2>
     <svg width="300" height="300" xmlns="http://www.w3.org/2000/svg">
       <style>
@@ -58,7 +61,7 @@
       <text x="10" y="68" class="con">loglan</text>
       <text x="250" class="prog">html</text>
       <text x="240" y="14" class="prog">css</text>
-      <text x="210" y="250" class="prog">javascript</text>
+      <text x="185" y="250" class="prog">javascript</text>
       <text x="210" class="prog">rust</text>
       <text x="140" y="140" class="prog">python</text>
       <text x="100" y="250" class="prog">typescript</text>
@@ -104,7 +107,9 @@
         a custom build of iosevka
       </li>
     </ul>
-    <p>i was in <a href="https://www.youtube.com/watch?v=L2tLc2uJgtU">this episode</a> of <i lang="jbo">la lojbau selkicrypoi</i> (<i lang="jbo">ki'e lanru qusai</i>)</p>
+    <p>
+      i was in <a href="https://www.youtube.com/watch?v=L2tLc2uJgtU">this episode</a> of <i lang="jbo">la lojbau selkicrypoi</i> (<i lang="jbo">ki'e lanru qusai</i>)
+    </p>
     <h2 id="likes">things i like</h2>
     <p>html is a very good medium. it can do basically everything</p>
     <p>
