--- a/tinies/index.html
+++ b/tinies/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <h1 id="top">tinies <span class="dbold">/ˈtajniːz/ <i>(n.)</i></span></h1>
+    <a href=".." id="back">back</a>
     <p>this is like sort&ouml;f a blog? in the original sense rather than the "vacuous text for marketing purposes" sense. <a href="https://thepoweroffive.me">Luci</a> <span class="clarity">&lt;5</span> has something zsimilar and calls it a bl&ouml;g</p>
     <table>
       <tr>
