--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
       that there all the time and never got rid of it even once theres things</small>
     </p>
     <p>
-      <code>mi2ebi</code> on discord and <a href="https://github.com/mi2ebi">github</a>
+      <code>mi2ebi</code> on discord and
+      <a href="https://github.com/mi2ebi">github</a> and
+      <a href="https://matrix.to/#/@mi2ebi:matrix.org">matrix</a>
     </p>
     <p>here are some <a href="tinies">tinies</a></p>
     <h2 id="languages">languages</h2>
